--- a/1-EnterpriseDevOps/1.1-Introduction.md
+++ b/1-EnterpriseDevOps/1.1-Introduction.md
@@ -3,7 +3,7 @@
 ## Table of Contents <!-- omit in toc -->
 - [What is DevOps?](#what-is-devops)
   - [Software development cycle](#software-development-cycle)
-- [Expore the DevOps Journey](#expore-the-devops-journey)
+- [Exlpore the DevOps Journey](#exlpore-the-devops-journey)
   - [Continuous integration](#continuous-integration)
   - [Continuous delivery](#continuous-delivery)
   - [Version control](#version-control)
@@ -13,6 +13,7 @@
   - [Infrastructure as Code](#infrastructure-as-code)
   - [Microservices](#microservices)
   - [Containers](#containers)
+- [Organization structures](#organization-structures)
 
 ## [What is DevOps?](https://learn.microsoft.com/en-us/training/modules/introduction-to-devops/2-what-is-devops)
 
@@ -46,7 +47,7 @@
 
 ![cycle graph](https://learn.microsoft.com/en-us/training/wwl-azure/introduction-to-devops/media/devops-road-optimize-learning-3f77fb52-55675a69.png)
 
-## [Expore the DevOps Journey](https://learn.microsoft.com/en-us/training/modules/introduction-to-devops/3-explore-devops-journey)
+## [Exlpore the DevOps Journey](https://learn.microsoft.com/en-us/training/modules/introduction-to-devops/3-explore-devops-journey)
 
 ### Continuous integration
 > Continuous integration is the automation of **building** and **testing** of code
@@ -84,3 +85,14 @@
 ### Containers
 
 > Containers are more **lightweight** than VMs and allow **easy configuration**
+
+## [Organization structures](https://learn.microsoft.com/en-us/training/modules/introduction-to-devops/5-define-organization-structure-agile-practices)
+
+
+> **Horizontal teams** are divided accoring to the architecture: UI team, Service team, data team, ...
+
+![Horizontal teams](https://learn.microsoft.com/en-us/training/wwl-azure/introduction-to-devops/media/devops-ds-image-101-cd10ac81-579ed473-4116f357.png)
+
+> **Vertical teams** span architecture and are aligned with disciplines
+
+![Vertical teams](https://learn.microsoft.com/en-us/training/wwl-azure/introduction-to-devops/media/devops-ds-image-103-b26487ac-24ceba66-43ffd70d.png)
